--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 	</header>
 	<section class="ba-section">
 		<div class="ba-container cf">
-		<img src="img/productman-assets/image.png" alt="image">
+		<img class="ba-section__image" src="img/productman-assets/image.png" alt="image">
 		<h1 class="ba-section__title">Black&<br />White</h1>
 		<p class="ba-section__text">Lorem ipsum dolor sit amet, consectetur adipisicing</p>
-		<p>elit sed do eiusmod tempor incididunt ut labore et</p>
-		<p>dolore magna aliqua. Ut enim ad minim veniam</p>
+		<p class="ba-section__text">elit sed do eiusmod tempor incididunt ut labore et</p>
+		<p class="ba-section__text">dolore magna aliqua. Ut enim ad minim veniam</p>
 		<a href="#" class="ba-section__viev">View Project</a>
 		</div>
 	 
@@ -52,10 +52,45 @@
 		</ul>
 		</nav>
 		</div>
+		<div class="ba-section__featured">
+		<div class="ba-container">
+			<h2 class="ba-section__product">Featured Product</h2>
+			<img class="ba-section__star" src="img/underline.png" alt="underline">
+			<p class="ba-section__texte">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br> tempor incididunt ut labore et dolore magna aliqua. </p>
+			<div class="ba-row">
+				<div class="ba-width-2-3"><a href="#"><div class="ba-section__foto1"></div></a></div>
+				<div class="ba-width-1-3"><a href="#"><div class="ba-section__foto2"></div></a></div>
+			</div>
+			<div class="ba-row ba-section_foto">
+				<div class="ba-width-1-3"><a href="#"><div class="ba-section__foto3">
+					<div class="ba-foto__title">
+					<p>Minimal Product Design</p></div>
+				</div></a></div>
+				<div class="ba-width-1-3"><a href="#"><div class="ba-section__foto4"></div></a></div>
+				<div class="ba-width-1-3"><a href="#"><div class="ba-section__foto5"></div></a></div>
+			</div>
+		</div>
+		</div>
+		<div class="ba-section__news">
+			<div class="ba-container">
+			<div class="ba-section__news-container">
+				<h2 class="ba-section__news-title">PRODUCTMAN NEWS</h2>
+				<p class="ba-section__news-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				<form class="ba-section__form" action="/">
+				<div class="ba-section__news-envelope"><i class="fa fa-envelope-o"></i></div>
+					<input type="email" placeholder="Enter your email address" name="email" required="required">
+					<input type="submit" value="subscribe">
+				</form>
+				<ul class="ba-section__social-icons">
+					<li class="ba-section__social-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
+					<li class="ba-section__social-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+					<li class="ba-section__social-item"><a href="#"><i class="fa fa-youtube"></i></a></li>
+					<li class="ba-section__social-item"><a href="#"><i class="fa fa-medium"></i></a></li>
+				</ul>
+				<p class="ba-section__footer">© Copyright <span>Your Company</span> ltd 2016. All Rights Reserved.</p>
+				</div>
+			</div>
+		</div>
 	</section>
-	
-	<footer class="ba-footer">
-
-	</footer>
 </body>
 </html>
